--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -1,7 +1,133 @@
-@import 'variables.scss';
+@import url('https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@400;700&display=swap');
 
+@import 'variables.scss';
+@import 'mixins.scss';
 * {
     margin: 0;
     padding: 0;
+    box-sizing: border-box;
+    background-color: $background-body;
 }
 
+@include MediaQuery($desktop-width) {
+    .header {
+
+        padding: 50px 60px;
+        font-family: sans-serif;
+
+        .header-logo {
+            
+            img {
+                width: 50px;
+                vertical-align: middle;    
+            }
+
+            float: left;
+            font-size: 2rem;
+            font-weight: bold;
+        }
+
+        .header-menu {
+
+                img {
+                    width: 50px;
+                    vertical-align: middle;
+                    margin-left: 20px;
+                }
+            
+                float: right;
+
+                font-size: 1.25rem;
+                font-weight: bold;
+               
+            
+        }
+
+        
+
+    }
+
+    .header::after {
+        content: "";
+        clear: both;
+        display: table;
+    }
+
+    .news-title {
+        font-family: "Roboto Mono";
+        text-align: center;
+        font-size: 1.75;
+        font-weight: 700;
+
+        span {
+            border-bottom: 3px solid black;
+        }
+    }
+
+    .row-content {
+        margin-top: 40px;
+        display: grid;
+        grid-template-columns: 20% 40% 20% 20%;
+        justify-content: center;
+        .column {
+
+            border-left: 1px solid black;
+
+            .article {
+
+                width: 100%;
+                padding: 0 30px;
+                .column-title {
+
+                    a {
+                        display: inline-block;
+                        line-height: 50px;
+                        word-spacing: 4px;
+                        font-size: 1.75rem;
+                        font-family: "Roboto Mono";
+                        text-decoration: none;
+                        color: black;
+                        font-weight: 700;
+                    }
+
+                    .column-title-img {
+
+                        img {
+                            max-width: 100%;
+                        }
+                    }
+                    
+                }
+
+                .column-content {
+                    font-size: 1.25rem;
+                    font-family: "Roboto Mono";
+                    font-weight: 400;
+                    line-height: 30px;
+                }
+
+                .column-author {
+
+                    display: flex;
+                    align-items: center;
+                    width: 100%;
+
+                    .column-author-avatar {
+                        
+                        img {
+                            width: 48px;
+                            border-radius: 5px;
+                        }
+                    }
+
+                    .column-author-detail {
+                        font-family: "Roboto Mono";
+                    }
+                    
+                }
+                
+            }
+            
+        }
+    }
+}
