--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -1,6 +1,6 @@
 $primary: #16a085;
+$gray: #5d5d5d;
 $background-body: #f8f3eb;
 // width screen
 
-$desktop-width: 1000px; 
-
+$desktop-width: 1000px;
