--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -10,283 +10,115 @@
     background-color: $background-body;
 }
 
-    .header {
+.header {
+
+    padding: 30px 10px 10px 10px;
+    font-family: sans-serif;
+    @include MediaQuery($desktop-width) {
 
         padding: 50px 60px;
-        font-family: sans-serif;
+    }
+    
+    .header-logo {
 
-        .header-logo {
-
-            img {
-                width: 50px;
-                vertical-align: middle;
-            }
-
-            float: left;
-            font-size: 2rem;
-            font-weight: bold;
+        img {
+            width: 50px;
+            vertical-align: middle;
         }
 
-        .header-menu {
+        float: left;
+        font-size: 1.75rem;
+        font-weight: bold;
+    }
 
-            img {
-                width: 50px;
-                vertical-align: middle;
+    .header-menu {
+
+        img {
+            width: 50px;
+            vertical-align: middle;
+            @include MediaQuery($desktop-width) {
                 margin-left: 20px;
             }
-
-            float: right;
-
-            font-size: 1.25rem;
-            font-weight: bold;
-
-
         }
+
+        float: right;
     }
-
-    .header::after {
-        content: "";
-        clear: both;
-        display: table;
+}
+.header::after {
+    content: "";
+    clear: both;
+    display: table;
+}
+.news-title {
+    font-family: "Roboto Mono";
+    text-align: center;
+    font-size: 1.75;
+    font-weight: 700;
+    span {
+        border-bottom: 3px solid black;
     }
-
-    .news-title {
-        font-family: "Roboto Mono";
-        text-align: center;
-        font-size: 1.75;
-        font-weight: 700;
-
-        span {
-            border-bottom: 3px solid black;
-        }
+}
+.row-content {
+    margin-top: 40px;
+    display: grid;
+    justify-content: center;
+    @include MediaQuery($desktop-width) {
+        grid-template-columns: 20% 40% 20% 20%;
     }
-
-    .row-content {
-                margin-top: 40px;
-                display: grid;
-                justify-content: center;
-                @include MediaQuery($desktop-width) {
-
-                    grid-template-columns: 20% 40% 20% 20%;
+    .column {
+        border-left: 1px solid black;
+        .article {
+            width: 100%;
+            padding: 0 30px;
+            .column-title {
+                a {
+                    display: inline-block;
+                    line-height: 45px;
+                    font-size: 1.6rem;
+                    font-family: "Roboto Mono";
+                    text-decoration: none;
+                    color: black;
+                    font-weight: 700;
                 }
-                .column {
-        
-                    border-left: 1px solid black;
-        
-                    .article {
-        
-                        width: 100%;
-                        padding: 0 30px;
-        
-                        .column-title {
-        
-                            a {
-                                display: inline-block;
-                                line-height: 45px;
-                                font-size: 1.75rem;
-                                font-family: "Roboto Mono";
-                                text-decoration: none;
-                                color: black;
-                                font-weight: 700;
-                            }
-        
-                            .column-title-img {
-        
-                                font-family: "Roboto Mono";
-        
-                                img {
-                                    max-width: 100%;
-                                }
-                            }
-        
-        
-                        }
-        
-                        .column-content {
-                            font-size: 1.1rem;
-                            font-family: "Roboto Mono";
-                            font-weight: 400;
-                            line-height: 30px;
-                            margin: 20px 0;
-        
-                            p {
-                                margin-bottom: 20px;
-                            }
-                        }
-        
-                        .column-author {
-        
-                            display: flex;
-                            align-items: center;
-                            width: 100%;
-        
-                            .column-author-avatar {
-        
-                                img {
-                                    width: 48px;
-                                    border-radius: 5px;
-                                }
-                            }
-        
-                            .column-author-detail {
-                                font-family: "Roboto Mono";
-        
-                                .author-name {
-                                    font-weight: bold;
-                                }
-                            }
-        
-                        }
-        
-                        .column-line {
-                            margin: 20px 0;
-                            border-bottom: 1px solid $gray ;
-                        }
-        
+                .column-title-img {
+                    font-family: "Roboto Mono";
+                    img {
+                        max-width: 100%;
+                        vertical-align: middle;
                     }
-        
                 }
-        
-        
-        
             }
-
-// @include MediaQuery($desktop-width) {
-//     .header {
-
-//         padding: 50px 60px;
-//         font-family: sans-serif;
-
-//         .header-logo {
-
-//             img {
-//                 width: 50px;
-//                 vertical-align: middle;
-//             }
-
-//             float: left;
-//             font-size: 2rem;
-//             font-weight: bold;
-//         }
-
-//         .header-menu {
-
-//             img {
-//                 width: 50px;
-//                 vertical-align: middle;
-//                 margin-left: 20px;
-//             }
-
-//             float: right;
-
-//             font-size: 1.25rem;
-//             font-weight: bold;
-
-
-//         }
-//     }
-
-//     .header::after {
-//         content: "";
-//         clear: both;
-//         display: table;
-//     }
-
-//     .news-title {
-//         font-family: "Roboto Mono";
-//         text-align: center;
-//         font-size: 1.75;
-//         font-weight: 700;
-
-//         span {
-//             border-bottom: 3px solid black;
-//         }
-//     }
-
-//     .row-content {
-//         margin-top: 40px;
-//         display: grid;
-//         grid-template-columns: 20% 40% 20% 20%;
-//         justify-content: center;
-
-//         .column {
-
-//             border-left: 1px solid black;
-
-//             .article {
-
-//                 width: 100%;
-//                 padding: 0 30px;
-
-//                 .column-title {
-
-//                     a {
-//                         display: inline-block;
-//                         line-height: 45px;
-//                         font-size: 1.75rem;
-//                         font-family: "Roboto Mono";
-//                         text-decoration: none;
-//                         color: black;
-//                         font-weight: 700;
-//                     }
-
-//                     .column-title-img {
-
-//                         font-family: "Roboto Mono";
-
-//                         img {
-//                             max-width: 100%;
-//                         }
-//                     }
-
-
-//                 }
-
-//                 .column-content {
-//                     font-size: 1.1rem;
-//                     font-family: "Roboto Mono";
-//                     font-weight: 400;
-//                     line-height: 30px;
-//                     margin: 20px 0;
-
-//                     p {
-//                         margin-bottom: 20px;
-//                     }
-//                 }
-
-//                 .column-author {
-
-//                     display: flex;
-//                     align-items: center;
-//                     width: 100%;
-
-//                     .column-author-avatar {
-
-//                         img {
-//                             width: 48px;
-//                             border-radius: 5px;
-//                         }
-//                     }
-
-//                     .column-author-detail {
-//                         font-family: "Roboto Mono";
-
-//                         .author-name {
-//                             font-weight: bold;
-//                         }
-//                     }
-
-//                 }
-
-//                 .column-line {
-//                     margin: 20px 0;
-//                     border-bottom: 1px solid $gray ;
-//                 }
-
-//             }
-
-//         }
-
-
-//     }
-// }
+            .column-content {
+                font-size: 1.1rem;
+                font-family: "Roboto Mono";
+                font-weight: 400;
+                line-height: 30px;
+                margin: 20px 0;
+                p {
+                    margin-bottom: 20px;
+                }
+            }
+            .column-author {
+                display: flex;
+                align-items: center;
+                width: 100%;
+                .column-author-avatar {
+                    img {
+                        width: 48px;
+                        border-radius: 5px;
+                    }
+                }
+                .column-author-detail {
+                    font-family: "Roboto Mono";
+                    .author-name {
+                        font-weight: bold;
+                    }
+                }
+            }
+            .column-line {
+                margin: 20px 0;
+                border-bottom: 1px solid $gray ;
+            }
+        }
+    }
+}
